# OpenVINO

./: .gitignore  CMakeLists.txt  README.md
01_インストール/: インストール.md
02_画像認識/: 画像認識.md
02_画像認識/cpp/: CMakeLists.txt  vehicle_recognition.cpp
02_画像認識/python/: emotions_recognition.py  vehicle_recognition.py
03_物体検出/: 物体検出.md
03_物体検出/cpp/: CMakeLists.txt  person_detection.cpp
04_同一物体認識/: 同一物体認識.md
05_モデルオプティマイザ/: .gitignore  モデルオプティマイザ.md
common/: CMakeLists.txt
common/include/: openvino_model.hpp  openvino_task.hpp  postprocess.hpp  preprocess.hpp  result_objects.hpp
common/src/: openvino_model.cpp  openvino_task.cpp  postprocess.cpp  preprocess.cpp  result_objects.cpp
python/human-pose-estimation-0001/: main.py
sample/human-pose-estimation-0007/: CMakeLists.txt  README.md  main.cpp
sample/person-detection-0303/: CMakeLists.txt  README.md  main.cpp
sample/vehicle-detection-0202/: CMakeLists.txt  README.md  main.cpp
